--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               <div class="col-12 col-lg-6">
                 <div class="d-flex justify-content-end">
-                  <img src="images/hero-img.png" alt="" class="hero-image">
+                  <img src="hero-img.png" alt="" class="hero-image">
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
           <div class="row">
             <div class="col-12 col-lg-3">
               <div class="card shadow border-0 rounded-1">
-                <img src="images/burger.jpg" class="card-img-top" alt="">
+                <img src="burger.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h3 class="card-title text-dark"> Cheese Burger </h3>
                   <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -103,7 +103,7 @@
             </div>
             <div class="col-12 col-lg-3">
               <div class="card shadow border-0 rounded-1">
-                <img src="images/pizza.jpg" class="card-img-top" alt="">
+                <img src="pizza.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h3 class="card-title text-dark"> Veg Pizza </h3>
                   <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-12 col-lg-3">
               <div class="card shadow  border-0 rounded-1">
-                <img src="images/sushi.jpg" class="card-img-top" alt="">
+                <img src="sushi.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h3 class="card-title text-dark"> Sushi Rolls </h3>
                   <p class="card-text text-dark"> Lorem ipsum dolor sit amet. </p>
@@ -123,7 +123,7 @@
             </div>
             <div class="col-12 col-lg-3">
               <div class="card shadow border-0 rounded-1">
-                <img src="images/lavacake.jpg" class="card-img-top" alt="">
+                <img src="lavacake.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h3 class="card-title text-dark">LavaCake </h3>
                   <p class="card-text text-dark"> Lorem ipsum dolor sit amet.</p>
@@ -142,7 +142,7 @@
 
                     <div class="col-12 col-lg-3">
                       <div class="card shadow border-0 rounded-1">
-                        <img src="images/deal.webp" class="card-img-top" alt="">
+                        <img src="deal.webp" class="card-img-top" alt="">
                         <div class="card-body">
                           <h3 class="card-title text-dark"> Burger with Fries </h3>
                           <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="col-12 col-lg-3">
                       <div class="card shadow border-0 rounded-1">
-                        <img src="images/deal2.avif" class="card-img-top" alt="">
+                        <img src="deal2.avif" class="card-img-top" alt="">
                         <div class="card-body">
                           <h3 class="card-title text-dark"> Chicken Burger </h3>
                           <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-12 col-lg-3">
                       <div class="card shadow border-0 rounded-1">
-                        <img src="images/deal3.jpeg" class="card-img-top" alt="">
+                        <img src="deal3.jpeg" class="card-img-top" alt="">
                         <div class="card-body">
                           <h3 class="card-title text-dark">Crispy Veg Rolls </h3>
                           <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -172,7 +172,7 @@
                     </div>
                     <div class="col-12 col-lg-3">
                       <div class="card shadow border-0 rounded-1">
-                        <img src="images/deal4.jpeg" class="card-img-top" alt="">
+                        <img src="deal4.jpeg" class="card-img-top" alt="">
                         <div class="card-body">
                           <h3 class="card-title text-dark"> Beef Petty Burger </h3>
                           <p class="card-text text-dark">Lorem ipsum dolor sit amet. </p>
@@ -264,7 +264,7 @@
                   <div
                     class="d-flex align-content-center justify-content-center rounded-2 justify-content-center text-center">
                     <div class="testimonial-card">
-                      <img src="images/rev.avif" width="200px" height="200px" class="rounded-circle pb-4" alt="">
+                      <img src="rev.avif" width="200px" height="200px" class="rounded-circle pb-4" alt="">
                       <p class="testimonial-name">Moomal Sandhwani</p>
                       <h3 class="testimonial-text pb-2">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
@@ -284,7 +284,7 @@
                   <div
                     class="d-flex align-content-center justify-content-center rounded-2 justify-content-center text-center">
                     <div class="testimonial-card">
-                      <img src="images/john.jpg" width="200px" height="200px" class="rounded-circle pb-4" alt="">
+                      <img src="john.jpg" width="200px" height="200px" class="rounded-circle pb-4" alt="">
                       <p class="testimonial-name">Awais</p>
                       <h3 class="testimonial-text pb-2">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
@@ -324,7 +324,7 @@
             1234 Foodie Lane, Latifabad, <br />
             Hyderabad, Sindh
           </p>
-          <a href="mailto:info@foodfleet.com" class="text-dark">info@foodfleet.com</a>
+          <a href="mailto:sanamohdali58@gmail.com" class="text-dark">sanamohdali58@gmail.com</a>
         </div>
         <div class="col-12 col-lg-4">
           <h3 class="fw-bold pb-3 text-dark">Our Link</h3>
